@@ -4,12 +4,12 @@ Gamera system:
 
 Teal Anderson
 Grant Arnold
+Rene Baston
 Colin Baumgarten
 Albert Brzeczko
 Robert Butz
 Lukas Cenovsky
 Alexander Cobb
-Christoph Dalitz
 Georg Drees
 Tim DiLauro
 Robert Ferguson
@@ -25,4 +25,4 @@ Jason Riesa
 Stefan Ruloff
 Marcel Schroers
 Seo Sanghyeon
-Jöchen Zimmerman
+Jochen Zimmerman
